--- a/main.css
+++ b/main.css
@@ -6,8 +6,8 @@
 canvas
 {
     display: block;
-    width: 80%;
-    height: 80%;
+    //width: 1200px;
+    //height: 500px;
     margin: 20px auto;
     background-color: blue;
 }
